# IA-Dame

./: .gitignore  CMakeLists.txt  README.md  scriptEntropie.py  scriptGenMatch.py  test.py  test_gf.cc
Client/: ClientNetwork.cc  ClientNetwork.h  client.cc  clientIA_V1.cc  clientTools.cc  clientTools.h
Client/ClientModel/: CBoard.cc  CBoard.h  CCase.cc  CCase.h  CPiece.cc  CPiece.h
ClientIA/: clientIA.cc
IA/: MinMax.cc  MinMax.h  heuristique.cc  heuristique.h
Serveur/: serverTools.cc  serverTools.h  serveur.cc
model/: Case.cc  Case.h  Dame.cc  Dame.h  Graph.cc  Graph.h  Joueur.cc  Joueur.h  Piece.cc  Piece.h  Pion.cc  Pion.h  Plateau.cc  Plateau.h
protocole/: protocole.h
